data/diff_tests/wasmtime/block_IncorrectHandlingofControlFlowAcrossModuleBoundaries_100.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\00\02\7f\7d\02\99\80\80\80\00\01\03\65\6e\76\11"
    "\6d\75\6c\74\69\5f\72\65\73\75\6c\74\5f\66\75\6e"
    "\63\00\00\03\82\80\80\80\00\01\00\0a\8d\80\80\80"
    "\00\01\87\80\80\80\00\00\02\00\10\00\0b\0b"
  )
""
)